--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 }
 body {
   /* background-color: rgb(116, 23, 23); */
-  background-image: url("./wp2075263.jpg");
+  background-image: url("./toy_story_movie_poster.jpg");
   background-size: cover;
   color: rgb(239, 243, 24);
   display: flex;
